feat: add autostart system feat: add bundled client runtime